Update homepage to custom domain

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://playersconnect.github.io/playersconnect-landing",
+  "homepage": "https://playersconnectonline.com",
   "name": "playersconnect-landing",
   "version": "0.1.0",
   "private": true,
